# Discord-analogue

docker_server/: CMakeLists.txt  dockerfile  server.cpp
mass/: CMakeLists.txt  main.cpp  mass  messengerclient.cpp  messengerclient.h
src/: Audio_Capture.cpp  audiocapture.h  client.cpp
src/front/: main_window.cpp  main_window.h
